--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URL = mongodb+srv://urja:GkFfguGy8Lf6T5d1@cluster0.1rasl9g.mongodb.net/
-PORT = 3000
+MONGODB_URL = mongodb+srv://urja:GkFfguGy8Lf6T5d1@cluster0.1rasl9g.mongodb.net/my-shop~
+PORT = 8080
